--- a/PursueOfStaffAreaNetCore7.UI/appsettings.json
+++ b/PursueOfStaffAreaNetCore7.UI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=WBSOFTWARE;Database=PursueOfStaffAreaDb;Trusted_Connection=SSPI;TrustServerCertificate=true"
+  },
+  "AppSettings": {
+    "MD5Salt": "D812ABGC8B9C1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
