--- a/PursueOfStaffAreaNetCore7.UI/PursueOfStaffAreaNetCore7.UI.csproj
+++ b/PursueOfStaffAreaNetCore7.UI/PursueOfStaffAreaNetCore7.UI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Views\AllowRequest\Add.cshtml~RFa63773.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
